<resources>
    <string name="app_name">CodexRM</string>

    <string name="sync">Sincronizar</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="ipAddress">Dirección IP</string>
    <string name="login">Iniciar Sesión</string>
    <string name="exportR">Exportar</string>
    <string name="importR">Importar</string>
    <string name="ris">Ris</string>
    <string name="bibtex">BibTeX</string>

    <string name="info_text">Acceso al usuario</string>
    <string name="prompt_username">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="login_boton">Iniciar Sesión</string>

    <string name="infoIpAddress_text">Establecer la dirección IP del servidor</string>
    <string name="prompt_ipAddress">Dirección IP</string>
    <string name="ipAddress_boton">Establecer</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="nombre_de_usuario">String</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>