<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dialog_body">

    <TextView
        android:id="@+id/info_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:paddingBottom="@dimen/padding_between"
        android:paddingTop="@dimen/padding_between"
        android:text="@string/info_text" />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/normal_padding"
        android:ems="10"
        android:hint="@string/prompt_username"
        android:inputType="textPersonName"
        android:padding="@dimen/edit_text_padding"/>

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/normal_padding"
        android:layout_marginBottom="@dimen/padding_between"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:padding="@dimen/edit_text_padding"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/button_padding"
        android:paddingBottom="@dimen/button_padding"
        android:text="@string/login_boton"/>

</RelativeLayout>